# get-prices-onchain-temp

./: .gitignore  Anchor.toml  README.md  create-codama-client.ts  package-lock.json  package.json
programs/get-prices-onchain/: Cargo.toml
programs/get-prices-onchain/src/: lib.rs
programs/get-prices-onchain/src/instructions/: get_price.rs  mod.rs
programs/pyth_oracle_1/: Cargo.toml
programs/pyth_oracle_1/src/: lib.rs
scripts/: test-pyth-api.ts
tests/: get-prices-onchain.ts  pyth_oracle_1.ts
tests/pyth-solana-kit/: README.md  pyth-account-address.ts
tests/pyth-solana-kit/scripts/: test-pyth-account-address.ts  verify-addresses.ts
utils/: pyth-custom.ts  pyth-utils.ts
